# qubes

./: .coveragerc  .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  DOCKER_README.md  Dockerfile.dev  LICENSE  OTR_SUBMISSION.json  PROGRESS_REPORT.md  README.md  SECURITY.md  Start Qubes GUI.bat  Start Qubes GUI.vbs  docker-compose.yml  gui_bridge.py  pyproject.toml  pytest.ini  qube  qubes.key.pub  requirements-ci.txt  requirements-heavy.txt  requirements.txt  setup.py  sidecar_server.py
ai/: README_AVATAR_GENERATION.md  __init__.py  _model_init_lock.py  avatar_generator.py  circuit_breakers.py  decision_validator.py  embeddings.py  fallback.py  model_registry.py  prompt_tools.py  reasoner.py  retry_decorators.py  semantic_search.py  skill_scanner.py
audio/: __init__.py  audio_manager.py  cache.py  command_parser.py  command_security.py  download_worker.py  gpu_acceleration.py  hallucination_filter.py  kokoro_tts.py  model_downloader.py  playback.py  qwen_tts.py  rate_limiter.py  recorder.py  stt_engine.py  tts_engine.py  tts_model_utils.py  tts_server.py  voice_registry.py  wsl2_server_manager.py  wsl2_setup.py  wsl2_tts.py  wsl2_tts_server.py
blockchain/: __init__.py  bcmr.py  bcmr_registry.py  chain_package.py  chain_sync.py  covenant_client.py  ipfs.py  manager.py  minting_api.py  nft_auth.py  nft_minter.py  platform_init.py  registry.py  verifier.py  wallet_contract_client.py  wallet_tx.py
cli/: __init__.py  debug.py  main.py
config/: __init__.py  alerts.yaml  audio_defaults.yaml  circuit_breakers.yaml  global_settings.json  global_settings.py  logging.yaml  prometheus.yml  retry.yaml  secure_settings.py  settings.py  trait_definitions.yaml  trust_scoring.yaml  trust_scoring_long_grind.yaml  user_preferences.py
core/: __init__.py  block.py  chain_state.py  document_processor.py  events.py  exceptions.py  game_manager.py  locker.py  memory_chain.py  multi_qube_conversation.py  official_category.py  p2p_multi_qube_conversation.py  proof_of_ethic.py  qube.py  session.py
covenant/: check-covenant-conditions.ts  debug-mint.ts  decode-signed-tx.ts  deploy.ts  migrate-to-v2.ts  migrate.ts  mint-cli.ts  package-lock.json  package.json  qubes_mint.cash  qubes_mint.json  qubes_wallet.cash  qubes_wallet.json  test-electrum.ts  transfer-cli.ts  tsconfig.json  verify-wc-roundtrip.ts  wallet-cli.ts
crypto/: bch_script.py  ecies.py  encryption.py  keys.py  merkle.py  seed_to_wif.py  signing.py  signing.py.backup  wallet.py
docs/: MANAGED_API_IMPLEMENTATION.md  QUBE_PROFILE_IMPLEMENTATION_PLAN.md  README.md  ai-models.md  architecture.md  blockchain.md  chain-state-consolidation-blueprint.md  cli-reference.md  context_visibility_plan.md  development.md  document-blocks-file-access-plan.md  games_implementation_plan.md  getting-started.md  gui-guide.md  model-awareness-implementation.md  personaplex-integration.md  qubes.md  qwen3-tts-implementation-plan.md  relationships.md  reputation-staking-system-plan.md  security.md  server-api.md  skill-nft-badges.md  skills.md  streaming-tts.md  trait-system-blueprint.md  trait-system-plan.md  user-guide.md  voice.md  wallet_implementation_plan.md
examples/: avatar_generation_example.py
monitoring/: metrics.py
(+570 files in other folders)
